--- a/apps/api/internal/email/templates/ApplicationRejectedEmail.html
+++ b/apps/api/internal/email/templates/ApplicationRejectedEmail.html
@@ -23,7 +23,7 @@
     <tr>
       <td style="padding:10px 20px 30px 20px; text-align:left;">
         <p style="margin:0 0 15px 0; font-size:16px;">
-          This is a test email that should not be sent out to the public. Test Rejection Email.
+          This is a test email that should not be sent out to the public. Test Email B.
         </p>
       </td>
     </tr>
