improvement:updated email templates

--- a/apps/api/internal/email/templates/ApplicationAcceptedEmail.html
+++ b/apps/api/internal/email/templates/ApplicationAcceptedEmail.html
@@ -46,7 +46,8 @@
               </div>
 
               <p style="margin:0 0 15px 0; font-size:16px;">
-                Please confirm your attendance by January 2nd. <strong>Failure to do so means you are giving up your
+                Please confirm your attendance by <u>January 2nd</u>. <strong>Failure to do so means you are giving up
+                  your
                   spot,</strong> and
                 we will admit someone from a waitlist.
               </p>
