--- a/apps/api/internal/email/templates/ApplicationRejectedEmail.html
+++ b/apps/api/internal/email/templates/ApplicationRejectedEmail.html
@@ -47,7 +47,8 @@
                 <li><strong>Join the Waitlist</strong>: We may have openings available closer to the event. You can
                   join the waitlist in the <a href="https://app.swamphacks.com/portal">SwampHacks Portal</a> or by
                   signing up
-                  in person on the day of check-in if space allows.
+                  in person on the day of check-in if space allows. The waitlist operates on a first-come, first-served
+                  basis.
                 </li>
                 <li><strong>Mentor</strong>: Share your knowledge and guide hackers through their projects. <a
                     href="https://swamphacks.com/mentor" style="color:#1155cc; text-decoration:underline;">Sign up to be
