--- a/scripts/bulk-email/templates/AcceptedReminder1.html
+++ b/scripts/bulk-email/templates/AcceptedReminder1.html
@@ -70,7 +70,7 @@
                 — The SwampHacks Team 🐊
               </p>
               <p style="margin:25px 0 0 0; font-size:16px; color:#333333;">
-                Need more info? Send an email to <a href="mailto:contact@swamphacks.com">contact@swamphacks.com</a>.
+                Need more info? Reach out to us at <a href="mailto:contact@swamphacks.com">contact@swamphacks.com</a>.
               </p>
             </td>
           </tr>
