--- a/scripts/bulk-email/templates/WaitlistReminder1.html
+++ b/scripts/bulk-email/templates/WaitlistReminder1.html
@@ -59,7 +59,7 @@
               </p>
               <p style="margin:0 0 18px 0; font-size:16px; color:#333333;">
                 Want to volunteer? Sign up through our <a
-                  href="https://swamphack.notion.site/2af3b41de22f80d7a5d9e1ddecf26004?pvs=105">Volunteer Application
+                  href="https://swamphack.notion.site/2af3b41de22f80d7a5d9e1ddecf26004">Volunteer Application
                   Form</a>.
               </p>
 
