feat: qr image generation, upload, link generation, and welcome email queue

--- a/apps/api/internal/email/templates/WelcomeEmail.html
+++ b/apps/api/internal/email/templates/WelcomeEmail.html
@@ -106,8 +106,7 @@
                 <div style="text-align:center; margin:20px 0;">
                   <div
                     style="display:inline-block; background-color:#e9f1db; border:2px solid #91a962; border-radius:10px; padding:16px;">
-                    <!-- <img src="{{ .QRCode }}" alt="Check-in QR Code" width="200" -->
-                    <img src="qrcode.jpg" alt="Check-in QR Code" width="200"
+                    <img src="{{ .QRPngLink }}" alt="Check-in QR Code" width="256"
                       style="display:block; border:none; outline:none;" />
                   </div>
                 </div>
