feat: get slice of attendee userIds, added route to send all welcome emails; fixes: various

--- a/apps/api/internal/email/templates/WelcomeEmail.html
+++ b/apps/api/internal/email/templates/WelcomeEmail.html
@@ -101,7 +101,8 @@
                   to ensure
                   that we don’t give your spot away to those in the in-person waitlist. At check-in, you will present
                   your check-in QR code found below and receive the badge you will use to guarantee you access to venue,
-                  food, and events. The QR code can also be found in the portal.</li>
+                  food, and events. The QR code can also be found in the <a href="https://app.swamphacks.com/"
+                    style="color:#1155cc; text-decoration:underline;">portal.</a></li>
 
                 <div style="text-align:center; margin:20px 0;">
                   <div
